--- a/Areas/Admin/Views/AdminAuth/Login.cshtml
+++ b/Areas/Admin/Views/AdminAuth/Login.cshtml
@@ -20,19 +20,19 @@
         <form class="login-form" method="post">
             <div class="text-center text-uppercase"><h5 class="colorlogin" style="font-weight: bold">ĐĂNG NHẬP HỆ THỐNG</h5></div>
             <hr />
-            <input type="text" placeholder="Tên đăng nhập" name="Admin_Username" id="Admin_Username" class="form-control col-12" required>
+            <input type="text" placeholder="Tên đăng nhập" name="Admin_Username" id="Admin_Username" class="form-control col-12" required value="admin">
             <span id="Admin_Username_Error" class="small mb-1 text-danger col-12"></span>
 
-            <input name="Admin_Pass" id="Admin_Pass" class="form-control col-12" type="password" placeholder="Mật khẩu" required >
+            <input name="Admin_Pass" id="Admin_Pass" class="form-control col-12" type="password" placeholder="Mật khẩu" required value="Admin123">
             <span id="Admin_Pass_Error" class="small mb-1 text-danger col-12"></span>
 
             <div class="d-inline-flex flex-nowrap mb-2 mt-2 col-12">
                 <div class="form-check">
-                    <input class="form-check-input" type="radio" id="radioDaiHoc" name="radioHeDaoTao" value="0">
+                    <input class="form-check-input" type="radio" id="radioDaiHoc" name="radioHeDaoTao" value="0" checked>
                     <label class="form-check-label" for="radioDaiHoc">Hệ đại học</label>
                 </div>
                 <div class="form-check" style="margin-left:15px">
-                    <input class="form-check-input" type="radio" id="radioSauDaiHoc" name="radioHeDaoTao" value="1" checked>
+                    <input class="form-check-input" type="radio" id="radioSauDaiHoc" name="radioHeDaoTao" value="1" >
                     <label class="form-check-label" for="radioSauDaiHoc">Hệ sau đại học</label>
                 </div>
             </div>
@@ -100,10 +100,8 @@
                     type: "POST",
                     data: JSON.stringify(data_entity),
                     contentType: "application/json;charset=utf-8",
-                    success: function (res) {
-                        console.log(res.success);
-                        if (res.success == true) {
-                            console.log(res.data);
+                    success: function (res) {                      
+                        if (res.success == true) {                           
                             if (res.data === 'CollegerLogin') { window.location.href = '/Admin/HomeAdmin/Index'; }
                             if (res.data === 'MasterLogin') { window.location.href = '/Admin/HocVienDangKys/DsHvDuTuyen'; }
                         } else {
