--- a/Areas/Admin/Views/DangKyXetTuyens/DkxtKQTthpt.cshtml
+++ b/Areas/Admin/Views/DangKyXetTuyens/DkxtKQTthpt.cshtml
@@ -40,11 +40,11 @@
             @using (Html.BeginForm("DkxtKQTthpt", "DangKyXetTuyens", FormMethod.Get))
             {
                 <div class="row g-1">
-                    <div class="col-xxl-1 col-xl-12">
+                    <div class="col-xxl-1 col-xl-12" style="display:none">
                         @Html.DropDownList("filteriDotxt", null, new { @class = "form-select " })
                     </div>
-                    <div class="col-xxl-1 col-xl-12">
-                        @Html.DropDownList("filteriNvong", null, "N.vọng...", new { @class = "form-select" })
+                    <div class="col-xxl-2 col-xl-12">
+                        @Html.DropDownList("filteriNvong", null, "Nguyện vọng...", new { @class = "form-select" })
                     </div>
                     <div class="col-xxl-2 colxl-12">
                         @Html.DropDownList("filteriNganh", null, "Ngành...", new { @class = "form-select " })
@@ -61,9 +61,16 @@
 
                     <div class="col-xxl-2 col-xl-12">
                         <div class="d-inline-flex flex-nowrap align-items-center">
-                            <button class="btn btn-outline-primary " id="bt_search" style="margin-right:4px">Lọc</button>
+                            <button class="btn btn-outline-primary bd-rd text-nowrap" id="bt_search" style="margin-right:4px" title="Lọc dữ liệu"><i data-feather="filter" style="vertical-align:middle!important"></i></button>
+                            <a class="btn btn-outline-primary bd-rd text-nowrap" id="bt_reset" href="@Url.Action("DkxtKQTthpt", "DangKyXetTuyens")" style="margin-right:4px;" title="Tải lại dữ liệu"><i data-feather="rotate-ccw" style="vertical-align:middle!important"></i></a>
+                            <a class="btn btn-outline-primary bd-rd text-nowrap" id="bt_extend" style="margin-right:4px; display:none"><i data-feather="chevron-down" style="vertical-align:middle!important"></i></a>
+                            <a class="btn btn-outline-primary bd-rd text-nowrap" id="bt_collapse" style="margin-right: 4px; display: none"><i data-feather="chevron-up" style="vertical-align:middle!important"></i></a>
+                            <a class="btn btn-outline-primary bd-rd  text-nowrap" href="@Url.Action("ExportTsDkxtKQTthpt", "ExportDatas")" id="bt_export_excel" style="padding-right:6px; padding-left:6px" title="Xuất dữ liệu ra tệp excel"><i data-feather="download" style="vertical-align:middle!important"></i> Excel</a>
+
+                            
+                            @*<button class="btn btn-outline-primary " id="bt_search" style="margin-right:4px">Lọc</button>
                             <a class="btn btn-outline-secondary" id="bt_reset" href="@Url.Action("DkxtKQTthpt", "DangKyXetTuyens")" style="padding-right: 6px; padding-left: 6px; margin-right:4px">Tải lại</a>
-                            <a class="btn btn-outline-primary" id="bt_export_excel" href="@Url.Action("ExportTsDkxtKQTthpt", "ExportDatas")" style="padding-right:6px; padding-left:6px">Xuất excel</a>
+                            <a class="btn btn-outline-primary" id="bt_export_excel" href="@Url.Action("ExportTsDkxtKQTthpt", "ExportDatas")" style="padding-right:6px; padding-left:6px">Xuất excel</a>*@
                         </div>
                     </div>
                     <hr class="mt-3 mb-2" />
@@ -146,19 +153,24 @@
                                 </td>
                                 <td>
                                     @{
-                                        if (item.Dkxt_KQTQG_TrangThai == 0)
+                                        if (item.Dkxt_KQTQG_TrangThai_KinhPhi == 0)
                                         {
                                             @Html.DisplayName("Chưa nộp")
 
                                         }
-                                        if (item.Dkxt_KQTQG_TrangThai == 1)
+                                        if (item.Dkxt_KQTQG_TrangThai_KinhPhi == 1)
                                         {
-                                            @Html.DisplayName("Đã nộp")
+                                            @Html.DisplayName("Đã nộp, Chưa KT")
 
                                         }
-                                        if (item.Dkxt_KQTQG_TrangThai == 2)
+                                        if (item.Dkxt_KQTQG_TrangThai_KinhPhi == 2)
                                         {
-                                            @Html.DisplayName("Đã duyệt")
+                                            @Html.DisplayName("Đã KT, có sai sót")
+
+                                        }
+                                        if (item.Dkxt_KQTQG_TrangThai_KinhPhi == 9)
+                                        {
+                                            @Html.DisplayName("Đã KT, đúng, đủ")
 
                                         }
                                     }
