--- a/Views/ThiSinhDangKies/Index.cshtml
+++ b/Views/ThiSinhDangKies/Index.cshtml
@@ -154,28 +154,27 @@
                                 <td>
                                     <p class="mt-0 mb-2"> Hộ khẩu thường trú: </p>
                                     <p class="mt-1 mb-0"> @Model.ThiSinh_HoKhauThuongTru</p>
-                                   
+
                                 </td>
                             </tr>
-                           
+
                             <tr>
                                 <td>
                                     <p class="mt-0 mb-2"> Địa chỉ nhận giấy báo: </p>
-                                    <p class="mt-1 mb-0"> @Model.ThiSinh_DCNhanGiayBao</p>                                    
+                                    <p class="mt-1 mb-0"> @Model.ThiSinh_DCNhanGiayBao</p>
                                 </td>
-                            </tr>                            
+                            </tr>
                     </table>
                     <div class="row">
                         <div class="col-12">
                             <center>
                                 <a href="@Url.Action("Edit", "ThiSinhDangKies", new {id = Model.ThiSinh_ID})" class="btn btn-light" style="color:blue!important">Cập nhật</a>
-                            </center>                           
+                            </center>
                         </div>
-                       
+
                     </div>
                 </div>
             </div>
         </div>
     </div>
-
-    
+</div>
